# ChargeManager

./: .gitignore  CMakeLists.txt  README.md  admindialog.cpp  admindialog.h  admindialog.ui  database.cpp  database.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  squerydialog.cpp  squerydialog.h  squerydialog.ui  studentdialog.cpp  studentdialog.h  studentdialog.ui  userchangedialog.cpp  userchangedialog.h  userchangedialog.ui  win.rc
